# hydrology

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
hydrology/: evapotranspiration.py  groundwater.py  infiltration.py  precipitation.py  routing.py  runoff.py  statistics.py
tests/: test_core.py
