[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrology"
version = "0.1.0"
description = "A Python library for hydrological and advanced hydrological calculations."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "jupyter>=1.0.0"
]
